--- a/iterations/iteration2/DES-Colorblind/nearbyprovider.css
+++ b/iterations/iteration2/DES-Colorblind/nearbyprovider.css
@@ -196,6 +196,7 @@
 .u-section-3 .u-text-2 {margin-right: 109px; margin-left: 109px}
 .u-section-3 .u-layout-wrap-1 {width: 940px}
 .u-section-3 .u-layout-cell-1 {min-height: 266px}
+.u-section-3 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
 .u-section-3 .u-text-3 {margin-left: 0; margin-right: 0}
 .u-section-3 .u-text-4 {margin-left: 0; margin-right: 0}
 .u-section-3 .u-layout-cell-2 {min-height: 266px}
