--- a/iterations/iteration2/DES-Normal/HOME-PAGE.css
+++ b/iterations/iteration2/DES-Normal/HOME-PAGE.css
@@ -26,7 +26,7 @@
   background-image: url("images/iStock-528057506.jpg");
 }
 .u-section-2-1 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 750px;
 }
 
 @media (max-width: 1199px) {
@@ -57,7 +57,7 @@
   background-position: 50% 50%;
 }
 .u-section-2-2 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 750px;
 }
 
 @media (max-width: 1199px) {
@@ -88,7 +88,7 @@
   background-position: 50% 50%;
 }
 .u-section-2-3 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 750px;
 }
 
 @media (max-width: 1199px) {
@@ -122,7 +122,7 @@
     ),
     url("images/HomePage_41.jpeg");
   background-position: 50% 53.34%;
-  min-height: 500px;
+  min-height: 750px;
 }
 
 @media (max-width: 1199px) {
@@ -141,7 +141,7 @@
   background-position: 50% 50%;
 }
 .u-section-2-5 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 750px;
 }
 
 @media (max-width: 1199px) {
