--- a/iterations/iteration2/DES-Normal/NEARBY-PROVIDER.css
+++ b/iterations/iteration2/DES-Normal/NEARBY-PROVIDER.css
@@ -190,6 +190,7 @@
 .u-section-3 .u-container-layout-5 {padding: 30px} 
 
 @media (max-width: 1199px){ .u-section-3 .u-sheet-1 {min-height: 812px}
+.u-section-3 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
 .u-section-3 .u-text-2 {margin-right: 109px; margin-left: 109px}
 .u-section-3 .u-layout-wrap-1 {width: 940px}
 .u-section-3 .u-layout-cell-1 {min-height: 266px}
